# ensight

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: insight.rs  main.rs  text.rs  vcs.rs
