[package]
name = "ensight"
version = "0.1.0"
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
surf = "2.0.0"
colored = "3.0.0"
once_cell = "1.21.0"
colorgrad = "0.7.0"
anyhow = "1.0.97"
base64 = "0.22.1"
time = { version = "0.3.39", features = ["serde", "serde-well-known"] }
clap = { version = "4.5.32", features = ["derive"] }

[dependencies.async-std]
features = ["attributes"]
version = "1.12.0"
