[package]
name = "ensight"
version = "0.1.0"
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
surf = "2.0.0"
colored = "3.1.1"
once_cell = "1.21.3"
colorgrad = { version = "0.8.0", features = ["preset"] }
anyhow = "1.0.100"
base64 = "0.22.1"
time = { version = "0.3.46", features = ["serde", "serde-well-known"] }
clap = { version = "4.5.57", features = ["derive"] }

[dependencies.async-std]
features = ["attributes"]
version = "1.13.2"
